--- a/testbed.html
+++ b/testbed.html
@@ -5,8 +5,10 @@
  <script src="sml.js"></script>
  </head>
   <body>
-<button type="button" onclick(alert(JSON.stringify(parseSml(document.getElementById('ta').value))))>Test parseSml()</button><br><br>
-  
+<button type="button" onclick="alert(JSON.stringify(parseSml(document.getElementById('ta').value)))">Test parseSml()</button><br><br>
+  <script>
+   
+   </script>
 SML text:<br>
 <textarea id="ta">
 
