--- a/testbed.html
+++ b/testbed.html
@@ -4,7 +4,7 @@
  <head>
  <script src="sml.js"></script>
  </head>
-  <body>
+  <body style=background:#eeffdd">
 <button type="button" onclick="f1()">Test parseSml()</button><br><br>
   <script>
    
