--- a/testbed.html
+++ b/testbed.html
@@ -5,7 +5,7 @@
  <script src="sml.js"></script>
  </head>
   <body style=background:#eeffdd">
-<button type="button" onclick="f1()">Test parseSml()</button><br><br>
+<button type="button" onclick="f1()">Test parse</button><br><br>
   <script>
    
 function f1()
