--- a/testbed.html
+++ b/testbed.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
  <head>
+ <script src="sml2.js"></script>
  <script src="sml.js"></script>
  </head>
   <body style=background:#eeffdd">
