--- a/testbed.html
+++ b/testbed.html
@@ -5,7 +5,7 @@
  </head>
   <body style=background:#eeffdd">
  <script src="sml2.js"></script>
- <script src="sml.js"></script>                                                      
+ <!-- <script src="sml.js"></script>    -->                                                  
 <button type="button" onclick="f1()">Test parse</button><br><br>
   <script>
    
