--- a/testbed.html
+++ b/testbed.html
@@ -3,7 +3,7 @@
 <html>
  <head>
  </head>
-  <body style=background:#eeffdd">
+  <body style="background:#eeffdd">
  <script src="sml2.js"></script>
  <!-- <script src="sml.js"></script>    -->                                                  
 <button type="button" onclick="f2()">Test parse</button><br><br>
