--- a/testbed.html
+++ b/testbed.html
@@ -4,9 +4,8 @@
  <head>
  </head>
   <body style="background:#eeffdd">
- <script src="sml2.js"></script>
- <!-- <script src="sml.js"></script>    -->                                                  
-<button type="button" onclick="f2()">Test parse</button><br><br>
+ <script src="sml.js"></script>                                                  
+<button type="button" onclick="f1()">Test parse</button><br><br>
   <script>
    
 function f1()
