--- a/testbed.html
+++ b/testbed.html
@@ -18,7 +18,7 @@ function f1()
    }
    catch(e)
    {
-        alert(e.message+"\n"+JSON.stringify(e.stack))
+        alert(e.message+"\n"+(e.stack))
    }
 }
    </script>
